--- a/main.css
+++ b/main.css
@@ -41,7 +41,8 @@ body , h1{
 
 .userInput, .userOutput {
 width: 100%;
-height: 250px;
+/*height: 250px;*/
+height: 40%;
 border-bottom: 2px solid;
 line-height: 1.5em;
 padding: 10px 20px;
@@ -61,6 +62,16 @@ padding: 10px 20px;
 span {
 	color: blue;
 }
+
+caption {
+	color: blue;
+}
+
+.submission {
+	background-color: blue;
+	height: 100px;
+	width: 150px;
+	}
 
 
 
